# OBC-App

./: .gitmodules  CMakeLists.txt  README.md
asserts/config/: OBC.conf
cmake/: include-ffmpeg.cmake
cmake/components/: obc-base.cmake  obc-device.cmake  obc-plugin.cmake  obc-ui-widget.cmake
docs/devDiary/: 202112.md
examples/: CMakeLists.txt
examples/jsonObject/: CMakeLists.txt  main.cpp
examples/remoteManager/: CMakeLists.txt  main.cpp
examples/socket/: CMakeLists.txt  main.cpp
src/: main.cpp
src/base/: OBCBaseHeader.hpp
src/base/interface/: DeviceInterface.hpp  DisplayInterface.hpp  StreamInterface.hpp
src/core/handler/: BundleHandler.hpp  ConfigHandler.cpp
src/core/link/: LinkInterface.hpp  SerialLink.cpp  SerialLink.hpp  SerialThread.cpp  SerialThread.hpp
src/core/settings/: SettingsBackend.cpp  SettingsBackend.hpp
src/core/stream/camera/: RTSPCameraStream.cpp  RTSPCameraStream.hpp
src/core/stream/data/: SerialDataStream.cpp  SerialDataStream.hpp
src/implement/: README.md
src/implement/device/PodSystem/: PSConfigureWidget.cpp  PSConfigureWidget.hpp  PSConfigureWidget.ui  PodSystemDevice.cpp  PodSystemDevice.hpp
src/implement/device/mvcam/: MVCAMDevice.cpp  MVCAMDevice.hpp
src/plugin/: ObPluginInterface.cmake  PluginInterface.hpp
src/plugin/examples/mock/: CMakeLists.txt  MockPlugin.cpp  MockPlugin.hpp  kernel.hpp
src/ui/: OBCPlatformApplication.hpp
src/ui/widgets/: OBCWidgetApplication.hpp
src/ui/widgets/editors/: w_RemoteEditor.cpp  w_RemoteEditor.hpp  w_RemoteEditor.ui
src/ui/widgets/widgets/: FrameDisplayGLWidget.cpp  (+10 more)
(+3 files in other folders)
